<resources>
    <string name="app_name">QuizApp</string>
    <string name="tittle">Welcome to my quiz App</string>
    <string name="topics">Choose one of the following topics and participate on a quiz based on the topic you have chosen</string>
    <string name="politics">Politics</string>
    <string name="question">QUESTIONS</string>
    <string name="coop">1.Who is the former COO of SABC</string>
    <string name="coo">Mr Hlaudi Motsoeneng</string>
    <string name="eff">Mr Ndlozi</string>
    <string name="parli">Ms Baleka Mbete</string>
    <string name="da">Mr Solly Msimanga</string>
    <string name="gabon">2.Who is the new  Re-elected president of Gabon?</string>
    <string name="zim">Mr Robert Mugabe</string>
    <string name="elected">Mr Ali Bongo Ondimba</string>
    <string name="buharu">Mr Muhammadu Buhari</string>
    <string name="googluck">Mr Goodluck Jonathan</string>
    <string name="Cogta">3.Who is the minister of Cooperate Governance and Traditonal Affairs(CoGTA)?</string>
    <string name="nene">Mr Nhlanhla Nene</string>
    <string name="bathabile">Ms Bathabile Dlamini</string>
    <string name="cogta">Mr Des Van Royen</string>
    <string name="brian">Mr Brian Molefe</string>
    <string name="china">4.Who is the president of Peoples Replublic of China?</string>
    <string name="xun">Zhang Xun</string>
    <string name="yuan">Yuan Shikai</string>
    <string name="chan">Mr Jackie Chan</string>
    <string name="president">Mr Xi Jinping</string>
    <string name="SAA">5.Who is the chairperson of South African Airways(SAA)?</string>
    <string name="saa">Mrs Dudu Myeni</string>
    <string name="noma">Ms Nomvula Mokonyane</string>
    <string name="thoko">Ms Thoko Didiza</string>
    <string name="gigabyte">Mr Melusi Gigaba</string>
    <string name="submit">SUBMIT</string>
    <string name="cars">Cars</string>
    <string name="bmw">1.Which year did BMW attempt to built their first electric car?</string>
    <string name="year">1973</string>
    <string name="years">1985</string>
    <string name="year1">1967</string>
    <string name="year2">2004</string>
    <string name="fast">2.What is the world fastest car?</string>
    <string name="venom">Hennessy Venom GT</string>
    <string name="bugatti">Bugatti Veyron Super Sport</string>
    <string name="f1">McLaren F1</string>
    <string name="f40"> Ferrari F40</string>
    <string name="amg">3.Who are the founders of AMG?</string>
    <string name="larry">Bill Gates and   Larry Page </string>
    <string name="warren">Bayerische Motoren Werke and Warren Buffet</string>
    <string name="hans">Hans-Werner Aufrecht  and  Erhard Melcher</string>
    <string name="toyoda">Enzo Anselmo Ferrari and Kiichiro Toyoda</string>
    <string name="expensive">4.What is the world most expensive car?</string>
    <string name="veneno">Lamborghini Veneno Roadster </string>
    <string name="lykan">Lykan HyperSport</string>
    <string name="grand">"Bugatti Veyron Grand Sport Vitesse</string>
    <string name="ccxr">Koenigsegg CCXR Trevita</string>
    <string name="factory">5.Where in South Africa will the new Chinese car factory be built?</string>
    <string name="port">Port Elizabeth</string>
    <string name="pta">Pretoria</string>
    <string name="durbs">Durban</string>
    <string name="cape">Cape Town</string>
    <string name="sport">Sport</string>
    <string name="meter">1.Who is the current world record holder, world champion and olympic champion in men 400 meter?</string>
    <string name="van">Mr Wyde Van Nieker</string>
    <string name="caster">Ms Caster Semenya</string>
    <string name="bolt">Mr Usain Bolt</string>
    <string name="oscar">Mr Oscar Pistorius</string>
    <string name="paid">2.Who is the world highest paid soccer star? </string>
    <string name="messi">Mr L Messi</string>
    <string name="ronald">Mr Christiano Ronaldo</string>
    <string name="drogba">Mr D Drogba</string>
    <string name="david"> Mr David Berkham</string>
    <string name="fifa">3.Who is the current FIFA president?</string>
    <string name="blatter">Mr Sepp Blatter </string>
    <string name="tokyo">Mr Tokyo Sexwale </string>
    <string name="gianni">Mr Gianni Infantino</string>
    <string name="jordan">Mr Danny Jordan</string>
    <string name="coach">4.Who is the current Manchester United coach?</string>
    <string name="paul">Mr Paul Pogba </string>
    <string name="louis">Louis van Gaal</string>
    <string name="ryan">"Mr Ryan Giggs</string>
    <string name="jose">Mr Jose Mourinho</string>
    <string name="caf">5.Who won the 2016 Orange Champions African FootBall?</string>
    <string name="sundowns">Mamelodi sundowns</string>
    <string name="chiefs">Kaizer Chiefs</string>
    <string name="pirates">Oralndo Pirates</string>
    <string name="ssunited">Super Sport United</string>


</resources>
