<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/lay"
    android:background="@color/White"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.android.quizapp.QuizApp">

    <LinearLayout
    style="@style/lay"
        android:orientation="vertical">

        <ImageView
            style="@style/header"
            android:scaleType="centerCrop"
            android:src="@drawable/qquis" />

        <TextView
            style="@style/header"
            android:background="@color/White"
            android:text="@string/tittle"
            android:textAllCaps="true"
            android:textColor="@color/Black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            style="@style/doc"
            android:text="@string/topics"
            android:textAllCaps="true"
            android:textColor="@color/Black"
            android:textSize="20sp" />


        <RadioGroup
            android:id="@+id/radiogroup"
            style="@style/header">

            <RadioButton
                android:id="@+id/politics"
                style="@style/header"
                android:backgroundTint="@color/White"
                android:text="@string/politics"
                android:textColor="@color/Black" />

            <RadioButton
                android:id="@+id/cars"
                style="@style/header"
                android:backgroundTint="@color/White"
                android:text="@string/cars"
                android:textColor="@color/Black" />

            <RadioButton
                android:id="@+id/sport"
                style="@style/header"
                android:backgroundTint="@color/White"
                android:text="@string/sport"
                android:textColor="@color/Black" />

        </RadioGroup>

    </LinearLayout>

</RelativeLayout>

